<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parent_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/example_01_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_click" />

    <Button
        android:id="@+id/example_01_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="#00F" />

    <TextView
        android:id="@+id/example_02_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/touch_this_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="#00F" />

    <Button
        android:id="@+id/example_03_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_new_activity" />

</LinearLayout>