<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parent_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/example_03_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yay_we_got_here" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="#00F" />

    <EditText
        android:id="@+id/example_04_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/example_04_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me" />

    <TextView
        android:id="@+id/example_04_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="#00F" />

    <TextView
        android:id="@+id/example_05_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="#00F" />

    <TextView
        android:id="@+id/example_06_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_fade_away" />

</LinearLayout>